Fix link to projects page in about.html

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" style="color:#00CFFF;">About</a></li>
-            <li><a href="TELE.html">Projects</a></li>
+            <li><a href="tele.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
