Update image paths in vector.html

--- a/vector.html
+++ b/vector.html
@@ -122,12 +122,12 @@
     <a href="grapic.html" class="back-btn">← Back to All Albums</a>
 
     <div class="gallery">
-        <img src="D:\uom\vector\WhatsApp Image 2025-11-21 at 20.11.09_67cc0288.jpg" alt="photo">
-        <img src="D:\uom\vector\WhatsApp Image 2025-11-21 at 20.11.09_e93aa32d.jpg" alt="photo">
-        <img src="D:\uom\vector\WhatsApp Image 2025-11-21 at 20.11.19_0c1a9cd7.jpg" alt="photo">
-        <img src="D:\uom\vector\WhatsApp Image 2025-11-21 at 20.11.27_0226c300 - Copy.jpg" alt="photo">
-        <img src="D:\uom\vector\WhatsApp Image 2025-11-21 at 20.11.27_0226c300.jpg" alt="photo">
-        <img src="D:\uom\vector\WhatsApp Image 2025-11-21 at 20.11.27_c88907fe.jpg" alt="photo">
+        <img src="fortfolio\vector\WhatsApp Image 2025-11-21 at 20.11.09_67cc0288.jpg" alt="photo">
+        <img src="fortfolio\vector\WhatsApp Image 2025-11-21 at 20.11.09_e93aa32d.jpg" alt="photo">
+        <img src="fortfolio\vector\WhatsApp Image 2025-11-21 at 20.11.19_0c1a9cd7.jpg" alt="photo">
+        <img src="fortfolio\vector\WhatsApp Image 2025-11-21 at 20.11.27_0226c300 - Copy.jpg" alt="photo">
+        <img src="fortfolio\vector\WhatsApp Image 2025-11-21 at 20.11.27_0226c300.jpg" alt="photo">
+        <img src="fortfolio\vector\WhatsApp Image 2025-11-21 at 20.11.27_c88907fe.jpg" alt="photo">
       
     </div>
 
