Update image sources in flyer.html

--- a/flyer.html
+++ b/flyer.html
@@ -122,18 +122,18 @@
     <a href="grapic.html" class="back-btn">← Back to All Albums</a>
 
     <div class="gallery">
-        <img src="D:/uom/photo/1.jpg" alt="photo">
-        <img src="D:/uom/photo/2.jpg" alt="photo">
-        <img src="D:/uom/photo/3.jpg" alt="photo">
-        <img src="D:/uom/photo/4.jpg" alt="photo">
-        <img src="D:/uom/photo/5.jpg" alt="photo">
-        <img src="D:/uom/photo/6.jpg" alt="photo">
-        <img src="D:/uom/photo/8.jpg" alt="photo">
-        <img src="D:/uom/photo/9.jpg" alt="photo">
-        <img src="D:/uom/photo/10.jpg" alt="photo">
-        <img src="D:/uom/photo/11.jpg" alt="photo">
-        <img src="D:/uom/photo/12.jpg" alt="photo">
-        <img src="D:/uom/photo/13.jpg" alt="photo">
+        <img src="fortfolio/photo/1.jpg" alt="photo">
+        <img src="fortfolio/photo/2.jpg" alt="photo">
+        <img src="fortfolio/photo/3.jpg" alt="photo">
+        <img src="fortfolio/photo/4.jpg" alt="photo">
+        <img src="fortfolio/photo/5.jpg" alt="photo">
+        <img src="fortfolio/photo/6.jpg" alt="photo">
+        <img src="fortfolio/photo/8.jpg" alt="photo">
+        <img src="fortfolio/photo/9.jpg" alt="photo">
+        <img src="fortfolio/photo/10.jpg" alt="photo">
+        <img src="fortfolio/photo/11.jpg" alt="photo">
+        <img src="fortfolio/photo/12.jpg" alt="photo">
+        <img src="fortfolio/photo/13.jpg" alt="photo">
     </div>
 
 </body>
