--- a/logo.html
+++ b/logo.html
@@ -122,49 +122,28 @@
     <a href="grapic.html" class="back-btn">← Back to All Albums</a>
 
     <div class="gallery">
-        <img src="fortfolio/flyer/a.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/b.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/c.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/c.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/d.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/e.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/f.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/g.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/h.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/i.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/j.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/k.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/l.jpg" alt="photo">
-        <img src="fortfolio/flyer
-/m.jpg" alt="photo">
-          <img src="fortfolio/flyer
-/n.jpg" alt="photo">
-            <img src="fortfolio/flyer
-/o.jpg" alt="photo">
-              <img src="fortfolio/flyer
-/p.jpg" alt="photo">
-                <img src="fortfolio/flyer
-/q.jpg" alt="photo">
-                  <img src="fortfolio/flyer
-/r.jpg" alt="photo">
-                    <img src="fortfolio/flyer
-/s.jpg" alt="photo">
-                      <img src="fortfolio/flyer
-/t.jpg" alt="photo">
-                        <img src="fortfolio/flyer
-/u.jpg" alt="photo">
+        <img src="a.jpg" alt="photo">
+        <img src="b.jpg" alt="photo">
+        <img src="c.jpg" alt="photo">
+        <img src="d.jpg" alt="photo">
+        <img src="e.jpg" alt="photo">
+        <img src="f.jpg" alt="photo">
+        <img src="g.jpg" alt="photo">
+        <img src="h.jpg" alt="photo">
+        <img src="i.jpg" alt="photo">
+        <img src="j.jpg" alt="photo">
+        <img src="k.jpg" alt="photo">
+        <img src="l.jpg" alt="photo">
+        <img src="m.jpg" alt="photo">
+        <img src="n.jpg" alt="photo">
+          <img src="o.jpg" alt="photo">
+            <img src="p.jpg" alt="photo">
+              <img src="q.jpg" alt="photo">
+                <img src="r.jpg" alt="photo">
+                  <img src="s.jpg" alt="photo">
+                    <img src="t.jpg" alt="photo">
+                      <img src="u.jpg" alt="photo">
+                        <img src="v.jpg" alt="photo">
     </div>
 
 </body>
